--- a/MoreMacroWritingIJ.html
+++ b/MoreMacroWritingIJ.html
@@ -192,7 +192,7 @@ function processFile(input, output, file) {
 
 
 <section data-state="intro0">
-  <h2><b>(Previous session) Task 1 Example Solution</b></h2>
+  <h2><b>Task 1 Example Solution</b></h2>
   
   <pre><code class="C">// Macro template to process multiple images in a folder
 
@@ -327,7 +327,7 @@ function processFile(input, output, file, sigma) {
 
 
 <section data-state="intro0">
-  <h2><b>(Previous session) Task 2 Example Solution</b></h2>
+  <h2><b>Task 2 Example Solution</b></h2>
   
   <pre><code class="C">// Macro template to process multiple images in a folder
 
@@ -480,7 +480,7 @@ function processFile(input, output, file, sigma) {
 
 
 <section data-state="intro0">
-  <h2><b>(Previous session) Task 3 Example Solution</b></h2>
+  <h2><b>Task 3 Example Solution</b></h2>
   
   <pre><code class="C">// Macro template to process multiple images in a folder
 
@@ -631,7 +631,7 @@ function processFile(input, output, file, sigma) {
 
 </div>
 
-<img style="position:fixed;bottom:1em;right:1em;" src="img/logo_WMS.jpg" width="10%">
+<img style="position:fixed;bottom:1em;right:1em;" src="CH922/logo_WMS.jpg" width="10%">
 </div>
 
     <script src="lib/js/head.min.js"></script>
